experimental/internal/lexer/testdata/comments/unterminated.proto.stderr.txt
error: encountered unmatched `/*` delimiter
  --> testdata/comments/unterminated.proto:5:1
   |
 5 | /*
   | ^^ expected a closing `*/`

encountered 1 error
